@@ -4,6 +4,11 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-aug-10 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++ eeschema
+	better hotkeys.cpp code.
+
 
 2007-Aug-08 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
